# nova-cli

./: .example.env  .gitignore  CYBERSEC_TERMINAL_OVERVIEW.md  Cargo.toml  README.md  ascii-text-art.txt  bug-spray.env.example  build_macos.sh  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-cybersec-terminal.sh
.github/workflows/: rust-ci.yml  rust-release.yml
NovaApp/: ContentView.swift  Info.plist  NovaApp.entitlements  NovaApp.swift  Package.resolved  Package.swift  README.md  SETUP.md  TerminalView.swift  exportOptions.plist  package.json
NovaApp/.build/index-build/: build.db  debug.yaml  plugin-tools.yaml  workspace-state.json
NovaApp/.build/index-build/arm64-apple-macosx/debug/: description.json  plugin-tools-description.json
NovaApp/.build/index-build/arm64-apple-macosx/debug/ArgumentParser-tool.build/: module.modulemap  output-file-map.json
NovaApp/.build/index-build/arm64-apple-macosx/debug/ArgumentParser.build/: Argument.d  Argument.swiftdeps  ArgumentDecoder.d  ArgumentDecoder.swiftdeps  ArgumentDecoder~partial.swiftmodule  ArgumentDefinition.d  ArgumentDefinition.swiftdeps  ArgumentDefinition~partial.swiftmodule  ArgumentDiscussion.d  ArgumentDiscussion.swiftdeps  ArgumentDiscussion~partial.swiftmodule  ArgumentHelp.d  ArgumentHelp.swiftdeps  ArgumentHelp~partial.swiftmodule  ArgumentParser.emit-module.d  ArgumentSet.d  ArgumentSet.swiftdeps  ArgumentSet~partial.swiftmodule  ArgumentVisibility.d  ArgumentVisibility.swiftdeps  ArgumentVisibility~partial.swiftmodule  Argument~partial.swiftmodule  AsyncParsableCommand.d  AsyncParsableCommand.swiftdeps  AsyncParsableCommand~partial.swiftmodule  BashCompletionsGenerator.d  BashCompletionsGenerator.swiftdeps  BashCompletionsGenerator~partial.swiftmodule  CodingKeyValidator.d  CodingKeyValidator.swiftdeps  CodingKeyValidator~partial.swiftmodule  CollectionExtensions.d  CollectionExtensions.swiftdeps  CollectionExtensions~partial.swiftmodule  CommandConfiguration.d  (+117 more)
NovaApp/.build/index-build/plugins/cache/: GenerateDoccReference  GenerateDoccReference-state.json  GenerateManual  GenerateManual-state.json
NovaApp/.build/index-build/repositories/SwiftTerm-74b92343/: FETCH_HEAD  packed-refs
NovaApp/.build/repositories/SwiftTerm-74b92343/: config
NovaApp/.build/repositories/swift-argument-parser-54a11a8d/: FETCH_HEAD
NovaApp/.swiftpm/xcode/xcshareddata/xcschemes/: NovaApp.xcscheme
NovaApp/NovaApp.xcodeproj/: project.pbxproj
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/ui/: index.html  main.js  package.json  vite.config.js
codex-cli/: package.json
codex-rs/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/core/: Cargo.toml  prompt.md
codex-rs/core/src/: chat_completions.rs  client.rs  client_common.rs  codex.rs  cybersec_config.rs  error.rs  lib.rs  subscription.rs
codex-rs/core/src/cybersec/: clipboard_monitor.rs  malware_scanner.rs  mod.rs  security_report.rs  threat_detector.rs
codex-rs/cybersec-terminal/: Cargo.toml  QUICK_TEST.md  README.md  cybersec_onboarding.md
codex-rs/cybersec-terminal/app-config/: build.rs  tauri.conf.json
codex-rs/cybersec-terminal/src/: main.rs
codex-rs/tui/: styles.md
codex-rs/tui/src/: app.rs  chatwidget.rs  cybersec_ui.rs  history_cell.rs  markdown_stream.rs  slash_command.rs  status_indicator_widget.rs  user_approval_widget.rs
codex-rs/tui/src/bottom_pane/: chat_composer.rs  mod.rs
codex-rs/tui/src/onboarding/: trust_directory.rs  welcome.rs
codex-rs/tui/src/streaming/: mod.rs
common/: Cargo.toml
common/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
scripts/: build_nova_macos.sh  build_sidecar_universal.sh  codesign_and_notarize.sh  test_nova_app.sh  update_app_icon.sh
src/: main.rs
src/ai/: mod.rs
src/permissions/: mod.rs
src/scanner/: mod.rs
src/ui/: mod.rs
tui/: Cargo.toml
tui/src/: lib.rs  main.rs
(+1137 files in other folders)
