[package]
name = "bug-spray"
version = "1.0.0"
edition = "2021"
description = "Bug Spray - AI-Powered Cybersecurity Companion"
license = "Apache-2.0"

[[bin]]
name = "bug-spray"
path = "src/main.rs"

[dependencies]
# Local Bug Spray components (based on Codex)
bug-spray-core = { path = "core" }
bug-spray-tui = { path = "tui" }
bug-spray-common = { path = "common" }

# Core dependencies
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
